src/test/resources/inspections/implicit_types.lua
---@type number
local aNumber

local aVoid
aNumber = <error descr="Type mismatch. Required: 'number' Found: 'void'">aVoid</error>

--local anImplicitNumber = 1
--aNumber = anImplicitNumber
